--- a/todo_frontend/pages/assets/style.css
+++ b/todo_frontend/pages/assets/style.css
@@ -1,8 +1,11 @@
+/* General */
+html,
 body {
-    background-color: rgb(255, 228, 196);
+    height: 100%;
+    margin: 0;
+    font-family: 'Helvetica', sans-serif;
 }
 
-/* Navbar */
 body {
     background-color: rgb(255, 228, 196);
     padding-top: 70px; /* Ajusta este valor según la altura de tu navbar */
@@ -25,6 +28,16 @@ body {
     color: white !important; /* Cambia el color de los enlaces a blanco */
 }
 
+.navbar.scrolled .btn-outline-dark {
+    border-color: white; /* Borde blanco */
+    color: white; /* Texto blanco */
+}
+
+/* Estilos para el hover del botón en modo .scrolled */
+.navbar.scrolled .btn-outline-dark:hover {
+    background-color: rgba(255, 255, 255, 0.1); /* Fondo semi-transparente al hacer hover */
+}
+
 #title {
     margin: auto;
     padding: 2rem;
@@ -38,30 +51,37 @@ body {
     overflow: hidden;
     cursor: pointer; /* Cambia el cursor al pasar sobre la tarjeta */
 }
+
 .card:hover {
     transform: scale(1.05);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
+
 .card-img-top {
     height: 200px;
     object-fit: cover;
 }
+
 .card-body {
     padding: 1.5rem;
     background-color: #a6e3f1;
 }
+
 .card-title {
     font-size: 1.25rem;
     font-weight: bold;
 }
+
 .card-text {
     font-size: 0.9rem;
     color: #555;
 }
+
 .availability {
     font-weight: bold;
     color: rgb(0, 135, 54); /* Verde para disponibilidad */
 }
+
 .no-availability {
     font-weight: bold;
     color: red; /* Rojo para no disponibilidad */
@@ -72,4 +92,61 @@ body {
     .navbar-brand {
         display: none;
     }
+}
+
+@media screen and (max-width: 575px) {
+    .navbar {
+        padding: 1rem;
+    }
+
+    .card-img-top {
+        height: 150px;
+    }
+
+    .card-body {
+        padding: 1rem;
+    }
+
+    .card-title {
+        font-size: 1rem;
+    }
+
+    .card-text {
+        font-size: 0.8rem;
+    }
+}
+
+/* Books Page */
+.table-responsive {
+    margin: 0 5%;
+}
+
+.btn-edit {
+    background-color: #007bff;
+    border: none;
+    color: white;
+}
+
+.btn-edit:hover {
+    background-color: #0056b3;
+}
+
+.btn-delete {
+    background-color: #dc3545;
+    border: none;
+    color: white;
+}
+
+.btn-delete:hover {
+    background-color: #c82333;
+}
+
+/* Estilos para el título */
+.page-title {
+    font-family: 'Helvetica', sans-serif;
+    text-align: center;
+    margin-bottom: 1.5rem;
+    font-size: 2.5rem;
+    font-weight: bold;
+    padding-top: 80px; /* Añade un margen superior adicional */
 }
